// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavEntry shallow renders the correct HTML structure 1`] = `
<div
  className="d-flex justify-content-between align-items-center"
  style={
    Object {
      "MozUserSelect": "text",
      "MsUserSelect": "text",
      "UserSelect": "text",
      "height": "1.5em",
      "webkitUserSelect": "text",
    }
  }
>
  <Badge
    className="entryIcon_9gb3m5-o_O-passedBadge_1isorc2-o_O-badge_1nusemj"
    color="secondary"
    pill={true}
    tag="span"
    title="testplan"
  >
    TP
  </Badge>
  <div
    className="entryName_1wxvk90-o_O-passed_1kh4m98"
    title="entry description"
  >
    entry name
  </div>
  <div
    className="entryIcons_1aztxxt"
  >
    <i
      className="entryIcon_9gb3m5"
      title="passed/failed testcases"
    >
      <span
        className="passed_1kh4m98"
      >
        0
      </span>
      /
      <span
        className="failed_11es5k7"
      >
        0
      </span>
    </i>
  </div>
</div>
`;

exports[`NavEntry when prop status="failed" name div and Badge have correct styles 1`] = `
<div
  className="d-flex justify-content-between align-items-center"
  style={
    Object {
      "MozUserSelect": "text",
      "MsUserSelect": "text",
      "UserSelect": "text",
      "height": "1.5em",
      "webkitUserSelect": "text",
    }
  }
>
  <Badge
    className="entryIcon_9gb3m5-o_O-failedBadge_1i8mqax-o_O-badge_1nusemj"
    color="secondary"
    pill={true}
    tag="span"
    title="testplan"
  >
    TP
  </Badge>
  <div
    className="entryName_1wxvk90-o_O-failed_11es5k7"
    title="entry description"
  >
    entry name
  </div>
  <div
    className="entryIcons_1aztxxt"
  >
    <i
      className="entryIcon_9gb3m5"
      title="passed/failed testcases"
    >
      <span
        className="passed_1kh4m98"
      >
        0
      </span>
      /
      <span
        className="failed_11es5k7"
      >
        0
      </span>
    </i>
  </div>
</div>
`;

exports[`NavEntry when prop status="xfail" name div and Badge have correct styles 1`] = `
<div
  className="d-flex justify-content-between align-items-center"
  style={
    Object {
      "MozUserSelect": "text",
      "MsUserSelect": "text",
      "UserSelect": "text",
      "height": "1.5em",
      "webkitUserSelect": "text",
    }
  }
>
  <Badge
    className="entryIcon_9gb3m5-o_O-unstableBadge_15sg10d-o_O-badge_1nusemj"
    color="secondary"
    pill={true}
    tag="span"
    title="testplan"
  >
    TP
  </Badge>
  <div
    className="entryName_1wxvk90-o_O-unstable_eujaab"
    title="entry description"
  >
    entry name
  </div>
  <div
    className="entryIcons_1aztxxt"
  >
    <i
      className="entryIcon_9gb3m5"
      title="passed/failed testcases"
    >
      <span
        className="passed_1kh4m98"
      >
        0
      </span>
      /
      <span
        className="failed_11es5k7"
      >
        0
      </span>
    </i>
  </div>
</div>
`;
